--- a/tugas.html/tugas(no.3/style.css
+++ b/tugas.html/tugas(no.3/style.css
@@ -1,5 +1,6 @@
 /* Reset sederhana */
 * {
+  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -116,9 +117,7 @@ body {
 
 header,
 .header {
-  color: rgb(48, 46, 46);
-  padding: 15px;
-  text-align: center;
+  
 }
 
 .Screenshot {
